# iis2mdc-rs

./: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/src/: main.rs
examples/self_test_stm32f401re/: Cargo.toml  README.md
examples/self_test_stm32f401re/src/: main.rs
examples/self_test_stm32f401re_embassy/: Cargo.toml  README.md
examples/self_test_stm32f401re_embassy/src/: main.rs
src/: lib.rs
src/register/: main.rs
